# polycopy

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.M8.md  README.md  README_save.md  alembic.ini  pyproject.toml
.claude/: settings.json
.claude/commands/: implement-module.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_baseline_m3_schema.py  0002_m4_pnl_snapshot_columns.py  0003_m5_discovery_schema.py  0004_m8_dry_run_realistic.py  0005_m11_latency_samples.py  0006_m12_trader_daily_pnl.py  0007_m5_bis_eviction.py  0009_m15_anti_toxic_lifecycle.py  0010_m17_pnl_snapshot_execution_mode.py
assets/: scoring_v2_labels.csv
assets/telegram/: README.md
docs/: architecture.md  backlog.md  night_test_runbook.md  setup.md  todo.md
docs/audit/: 2026-04-24-polycopy-code-audit.md
docs/bug/: README.md  session_A_anti_toxic_trader_lifecycle.md  session_B_scoring_v2_reliability.md  session_C_dashboard_ux_and_consistency.md  session_D_pipeline_metrics_and_ops.md  session_E_cross_layer_integrity_and_hardening.md
docs/deepsearch/: gemini_Polycopy _esearch_Brief_ Smart_Money.md  (+3 more)
scripts/: backtest_scoring_v2.py  capture_clob_ws_fixture.py  capture_screenshots.py  night_test_status.py  pnl_report.py  reboot_bot.sh  score_backtest.py  seed_demo_db.py  seed_m12_dev_curves.py  setup.sh  validate_ma_hypotheses.py  wrap_usdc_to_pusd.py
specs/: M1-watcher-storage.md  M2-strategy-engine.md  M3-executor.md  M4-monitoring.md  M4.5-dashboard.md  M6-dashboard-2026.md  M8-dry-run-realistic.md  MX_discovery_auto_lockout_prompt.md  MX_watcher_live_reload_prompt.md  m5_backtest_seed.txt
tests/: conftest.py
(+379 files in other folders)
